# Ray

./: AttackTables.c  AttackTables.h  Bitboard.c  Bitboard.h  CMakeLists.txt  Debug.c  Debug.h  Defs.c  Defs.h  Eval.c  Eval.h  HashTable.c  HashTable.h  Magics.c  Magics.h  Move.c  Move.h  MoveGen.c  MoveGen.h  MoveOrder.c  MoveOrder.h  Notation.c  Notation.h  Perft.c  Perft.h  Piece.h  Position.c  Position.h  README.md  Search.c  Search.h  SearchManager.c  SearchManager.h  Square.h  Transpositions.c  Transpositions.h  Uci.c  Uci.h  Utils.c  Utils.h  (+4 more)
